RESOLVED FIXED30011
Fix build when SVG is not enabled
https://bugs.webkit.org/show_bug.cgi?id=30011
Summary Fix build when SVG is not enabled
Laszlo Gombos
Reported 2009-10-02 03:09:48 PDT
After r48989 there is a build failure when SVG support is disabled.
Attachments
1st try (3.39 KB, patch)
2009-10-02 03:16 PDT, Laszlo Gombos
no flags
Laszlo Gombos
Comment 1 2009-10-02 03:16:02 PDT
Created attachment 40503 [details] 1st try Move TextRenderingMode related functions out from the ENABLE(SVG) guard.
WebKit Commit Bot
Comment 2 2009-10-02 11:02:58 PDT
Comment on attachment 40503 [details] 1st try Clearing flags on attachment: 40503 Committed r49029: <http://trac.webkit.org/changeset/49029>
WebKit Commit Bot
Comment 3 2009-10-02 11:03:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.