2009-10-02  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Darin Adler.

        Build fix when SVG is not enabled
        https://bugs.webkit.org/show_bug.cgi?id=30011

        Move TextRenderingMode related functions out from
        the ENABLE(SVG) guard.

        * css/CSSPrimitiveValueMappings.h:
        (WebCore::CSSPrimitiveValue::CSSPrimitiveValue):
        (WebCore::CSSPrimitiveValue::operator TextRenderingMode):

Canonical link: https://commits.webkit.org/40588@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49029 268f45cc-cd09-0410-ab3c-d52691b4dbfc