WebCore/css/CSSPrimitiveValueMappings.h
@@ -1839,6 +1839,42 @@ template<> inline CSSPrimitiveValue::operator FontSmoothingMode() const
     return AutoSmoothing;
 }
 
+template<> inline CSSPrimitiveValue::CSSPrimitiveValue(TextRenderingMode e)
+    : m_type(CSS_IDENT)
+{
+    switch (e) {
+        case AutoTextRendering:
+            m_value.ident = CSSValueAuto;
+            break;
+        case OptimizeSpeed:
+            m_value.ident = CSSValueOptimizespeed;
+            break;
+        case OptimizeLegibility:
+            m_value.ident = CSSValueOptimizelegibility;
+            break;
+        case GeometricPrecision:
+            m_value.ident = CSSValueGeometricprecision;
+            break;
+    }
+}
+
+template<> inline CSSPrimitiveValue::operator TextRenderingMode() const
+{
+    switch (m_value.ident) {
+        case CSSValueAuto:
+            return AutoTextRendering;
+        case CSSValueOptimizespeed:
+            return OptimizeSpeed;
+        case CSSValueOptimizelegibility:
+            return OptimizeLegibility;
+        case CSSValueGeometricprecision:
+            return GeometricPrecision;
+        default:
+            ASSERT_NOT_REACHED();
+            return AutoTextRendering;
+    }
+}
+
 #if ENABLE(SVG)
 
 template<> inline CSSPrimitiveValue::CSSPrimitiveValue(LineCap e)
@@ -2239,42 +2275,6 @@ template<> inline CSSPrimitiveValue::operator ETextAnchor() const
         default:
             ASSERT_NOT_REACHED();
             return TA_START;
-    }
-}
-
-template<> inline CSSPrimitiveValue::CSSPrimitiveValue(TextRenderingMode e)
-    : m_type(CSS_IDENT)
-{
-    switch (e) {
-        case AutoTextRendering:
-            m_value.ident = CSSValueAuto;
-            break;
-        case OptimizeSpeed:
-            m_value.ident = CSSValueOptimizespeed;
-            break;
-        case OptimizeLegibility:
-            m_value.ident = CSSValueOptimizelegibility;
-            break;
-        case GeometricPrecision:
-            m_value.ident = CSSValueGeometricprecision;
-            break;
-    }
-}
-
-template<> inline CSSPrimitiveValue::operator TextRenderingMode() const
-{
-    switch (m_value.ident) {
-        case CSSValueAuto:
-            return AutoTextRendering;
-        case CSSValueOptimizespeed:
-            return OptimizeSpeed;
-        case CSSValueOptimizelegibility:
-            return OptimizeLegibility;
-        case CSSValueGeometricprecision:
-            return GeometricPrecision;
-        default:
-            ASSERT_NOT_REACHED();
-            return AutoTextRendering;
     }
 }
 
